<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Live Here</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gps_text">Use Current\nLocation</string>
    <string name="choose_text">Choose a\nLocation</string>
    <string name="title_activity_stat">Stat</string>
    <string name="title_activity_choose_location">ChooseLocation</string>

    <string-array name="provinces">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>Newfoundland and Labrador</item>
        <item>New Brunswick</item>
        <item>Nova Scotia</item>
        <item>Ontario</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
    </string-array>

    <string name="get_stat_button">Get Stats</string>
    <string name="province_text">"Province: "</string>
    <string name="size_text">Size</string>
    <string name="year_2010">2010</string>
    <string name="year_2011">2011</string>
    <string name="year_2012">2012</string>
    <string name="year_2013">2013</string>
    <string name="one_bed">1-bed</string>
    <string name="two_bed">2-bed</string>
    <string name="three_bed">3-bed</string>

    <string-array name="cities"></string-array>

    <string name="title_activity_city">City</string>

    <string name="choose_city_text">Choose City</string>

    <string name="city_text">"City: "</string>
    <string name="year"/>
    <string name="bachelor_text">Bachelor</string>
    <string name="toDo">Go fuck yourself</string>

</resources>
