<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Stat" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/provinceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/province_text"
            android:textSize="28sp" />
        
        <TextView
            android:id="@+id/cityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_text"
            android:textSize="28sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dip" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TableLayout
                android:id="@+id/rentTableLayout"
                android:layout_width="364dp"
                android:layout_height="match_parent" >

                <TableRow>

                    <TextView
                        android:id="@+id/size"
                        android:layout_width="110dip"
                        android:layout_height="40dip"
                        android:text="@string/size_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/year1"
                        android:layout_width="170dip"
                        android:layout_height="40dip"
                        android:text="@string/year"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/year2"
                        android:layout_width="170dip"
                        android:layout_height="40dip"
                        android:text="@string/year"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/year3"
                        android:layout_width="170dip"
                        android:layout_height="40dip"
                        android:text="@string/year"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/year4"
                        android:layout_width="170dip"
                        android:layout_height="40dip"
                        android:text="@string/year"
                        android:textSize="24sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="110dip"
                        android:layout_height="40dip"
                        android:text="@string/one_bed"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/year1OneBed"
                        android:layout_width="170dip"
                        android:layout_height="40dip"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="110dip"
                        android:layout_height="40dip"
                        android:text="@string/two_bed"
                        android:textSize="24sp" />
                    
                    <TextView
                        android:id="@+id/year1TwoBed"
                        android:layout_width="170dip"
                        android:layout_height="40dip"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="110dip"
                        android:layout_height="40dip"
                        android:text="@string/three_bed"
                        android:textSize="24sp" />
                    
                    <TextView
                        android:layout_width="170dip"
                        android:layout_height="40dip"
                        android:text="$0000 - $8790"
                        android:textSize="24sp" />
                </TableRow>
                
                <TableRow>

                    <TextView
                        android:layout_width="110dip"
                        android:layout_height="40dip"
                        android:text="@string/bachelor_text"
                        android:textSize="24sp" />
                    
                    <TextView
                        android:layout_width="170dip"
                        android:layout_height="40dip"
                        android:text="$0000 - $8790"
                        android:textSize="24sp" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </LinearLayout>
</RelativeLayout>